# stt-playground

./: .gitignore  README.md  default.env  environment.yml  main_groq.py  main_local.py  pyproject.toml  reduce_ar.sh  reduce_ar_wav.sh
